cmake_minimum_required(VERSION 3.19)
project(hackathon)
include_directories(vendor/json_struct/include)
include_directories(model)
#find_package(HttpLib)
include_directories(MyCreateBox)
include_directories(HandleButton)
include_directories(FrontEnd)
include_directories(env)
set(WIN32  14)
include_directories(HttpLib)
add_executable(hackathon WIN32 main.cpp HttpLib/HttpLib.h HttpLib/HttpLib.cpp MyCreateBox/MyCreateBox.cpp MyCreateBox/MyCreateBox.h HandleButton/HandleButton.cpp HandleButton/HandleButton.h FrontEnd/Login.cpp FrontEnd/Login.h env/env.h model/model.cpp model/model.h)
#add_executable(hackathon WIN32 test.cpp HttpLib/HttpLib.h HttpLib/HttpLib.cpp)
#add_executable(hackathon WIN32 main.cpp)
